# ubuntu-release

./: .gitignore  LICENSE  README.md  charmcraft.yaml  go.mod  go.sum  main.go  pyproject.toml  rockcraft.yaml  spread.yaml
.github/workflows/: build-and-test-charms.yaml  ci.yaml  release.yaml  zizmor.yaml
charm/: Makefile  README.md  charmcraft.yaml  pyproject.toml
charm/src/: charm.py  worker.py
charm/tests/functional/: test_worker.py
charms/: README.md  conftest.py  pyproject.toml
charms/worker/: charmcraft.yaml  pyproject.toml  requirements.txt  spread.yaml
charms/worker/src/: charm.py  temporal.py  worker.py
charms/worker/tests/: __init__.py  test_worker.py
charms/worker/tests/functional/: test_temporal.py
charms/worker/tests/integration/: conftest.py  test_deploy.py  test_worker.py
charms/worker/tests/spread/functional/temporal/: task.yaml
charms/worker/tests/spread/functional/worker/: task.yaml
charms/worker/tests/spread/integration/deploy-charm/: task.yaml
charms/worker/tests/spread/integration/ingress/: task.yaml
charms/worker/tests/unit/: test_charm.py
cmd/: root.go
cmd/ubuntu-release/: hello.go  main.go  root.go
cmd/ubuntu-release-worker/: main.go  root.go
experimentations/: fetch-serials.py  publish-image-set  resolute-snapshot-1.yaml  resolute-snapshot-2.yaml  resolute-snapshot-3.yaml
internal/hello/: activity.go  execute.go  worker.go  workflow.go
internal/logging/: logging.go
lib/: utils.go
tests/hello/: task.yaml
tests/lib/: common.sh
ubuntu-release/: main.go
ubuntu-release-worker/: main.go
(+7 files in other folders)
