[project]
name = "ubuntu-release"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "jubilant>=1.3.0",
    "pytest>=8.3.5",
    "requests>=2.32.4",
    "tenacity>=9.0.0",
]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]
